--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="span12">
-			<%= form_for @jobs, :as => :jobs do |f| %>
+			<%= form_for @job, :as => :jobs do |f| %>
 				<%= f.text_field :name, :placeholder => "Name" %></br>
 				<%= f.collection_select :category_id, Category.order(:discipline), :id, :discipline, include_blank: true %></br>
 				<%= f.text_area :info, :placeholder => "Information" %></br>
@@ -10,10 +10,11 @@
 				<%= f.hidden_field :id, :value => params[:id] %></br>
 				<%= f.collection_select :role_id, Role.order(:role), :id, :role, include_blank: true %></br>
 				<%= f.text_field :location, :placeholder => "Location" %></br>
+				Is this job open? <%= f.check_box :open, {}, "t", "f" %></br></br>
 				<%= f.submit %>
 			<% end %>
 
-			<%= link_to "Delete This Job", @jobs, method: :delete,
+			<%= link_to "Delete This Job", @job, method: :delete,
 																  data: { confirm: 'You Sure?'}%>
 		</div>
 	</div>
