--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -17,12 +17,6 @@
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate  "></i> &nbsp Companies </li>
 			<% end %>
-			<%= link_to knowledgebase_path do %>
-				<li><i class="icon-book  "></i> &nbsp Knowledge Base</li>
-			<% end %>
-			<%= link_to suggestions_path do %>	
-				<li><i class="icon-wrench  "></i> &nbsp Suggestions & Bugs</li>
-			<% end %>
 		</ul>
 	</div>
 	
@@ -31,16 +25,20 @@
 	</div>
 	
 
-	
+	<% if false %>
 	<div class="user-area">
 		<%= link_to edit_user_registration_path do%>
 			<b><%= current_user.first_name %> <%= current_user.last_name %></b><br />
 			<%= current_user.email %><br />
 		<% end %>
 		<br />
+		
+		
 		<%= link_to 'User Settings', edit_user_registration_path %> &nbsp &nbsp &nbsp &nbsp
 		<%= link_to 'Log Out', destroy_user_session_path, :method =>"DELETE" %>
 	</div>
+	<% end %>
+	
 	<div class="menu-area about-area">
 		<ul class="unstyled">
 			
@@ -51,7 +49,9 @@
 				 	 Contact Us
 				<% end %>
 			</li>
-
+			<%= link_to suggestions_path do %>	
+				<li><i class="icon-wrench  "></i> &nbsp Suggestions & Bugs</li>
+			<% end %>
 			<%= link_to about_path do %>
 				<li><i class="icon-user  "></i> &nbsp About ResQuery</li>
 			<% end %>
