--- a/app/views/dashboards/admin.html.erb
+++ b/app/views/dashboards/admin.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-	<div class="row">
+<div class="container-fluid">
+	<div class="row-fluid">
 		<div class="span12">
 			<b> Summary </b>
 			<p>There are <%= Company.all.count %> Companies</p>
