--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -3,6 +3,8 @@
 		.row-fluid
 			.span12		
 				.pull-right
+					=link_to 'Help', suggestions_path
+					&nbsp &nbsp
 					= link_to 'User Settings' , edit_user_registration_path 
 					&nbsp &nbsp
 					= link_to 'Log Out', destroy_user_session_path, :method =>"DELETE"
