--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -5,6 +5,6 @@
 				.pull-right
 					=link_to 'Help', suggestions_path
 					&nbsp &nbsp
-					= link_to 'User Settings' , edit_user_registration_path 
+					= link_to 'Account Settings' , edit_user_registration_path 
 					&nbsp &nbsp
 					= link_to 'Log Out', destroy_user_session_path, :method =>"DELETE"
