--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -1,9 +1,9 @@
 <div class="left-dashboard">
-	<%if false%>
+
 	<div class="logo">
-		<%= link_to image_tag('resumeQuery_white.png'), root_path %>
+		<%= link_to image_tag('menulogo.png'), root_path %>
 	</div>
-	<% end %>
+
 
 	
 	<div class="menu-area">
