--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -1,18 +1,9 @@
-<div class="hierachy">
-	<div class="row-fluid">
-		<div class="span12 bottom-border">
-			We appreciate the feedback!
-		</div>
-	</div>
-</div>
-
 <div class="row-fluid">
 
 	<div class="span12">
 
 		<div class="green-heading">
-			<h3>Thanks for coming to this page<br/>
-				Is there something we can improve for you?</h3>
+			<h3>How can we help?</h3>
 		</div>
 		Have you found any bugs on the website?<br />
 		Do you think we can improve the website to help you more?<br /> 
