--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -3,6 +3,9 @@
 		.row-fluid
 			.span12		
 				.pull-right
+					- if current_user.role == "admin" 
+						=link_to 'Admin', admin_path
+					&nbsp &nbsp
 					= link_to 'Help', suggestions_path
 					&nbsp &nbsp
 					= link_to 'Account Settings' , edit_user_registration_path 
