--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,2 +1,15 @@
-<h1>Groups#new</h1>
-<p>Find me in app/views/groups/new.html.erb</p>
+<%= form_for @group do |f| %>
+	
+	<%# f.fields_for do |group| %>
+	
+	<%= f.text_field :name, :placeholder => "Name" %>
+	<%# end %>
+	
+	<%= f.fields_for :groupmembers do |groupmembers| %>
+		<%= groupmembers.hidden_field :user_id, :value => current_user.id %>
+		<%= groupmembers.hidden_field :group_id, :value => params[:id] %>
+		<%= groupmembers.hidden_field :admin, :value => true %>
+	<% end %>
+	<%= f.submit %>
+	
+<% end %>
