--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 	  <%= csrf_meta_tags %>
 	  <%= favicon_link_tag 'favicon.ico' %>
 	  <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+ 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 	</head>
 	
 	<body>
