trying to make it mobile friendly

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -26,9 +26,9 @@
 						<% end %>
 					</div>
 
-					<div class="span3">
+					<div class="span3 hidden-phone">
 						<%= link_to apps do %> 
-							<div class="pull-right red-text appManage-status">
+							<div class="pull-right red-text appManage-status ">
 								<%= apps.status %> 
 							</div>	
 						<% end %>
