--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,8 +3,12 @@
 
 <h4> <%= link_to "New Group", new_group_path %> </h4>
 
-<% @groups.each do |group| %>
-<ul>	
-	<li> <%= link_to "#{group.name}", group %> </li>
-</ul>
-<% end %>
+	
+	<% @groups.each do |group| %>
+	<ul>	
+		<li> <%= link_to "#{group.name}", group %> </li>
+	</ul>
+	<% end %>
+	
+	<%else%>
+	
