--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,19 @@
 		<!-- Yeah if you're reading this code, sorry for the eyesore -Pashpops -->
 		<!-- Alternatively if you're keen on making this code & whole project more awesome, email us: pasha.rayan@gmail.com -->		
 		<% if signed_in? %>
+			<div class="signed-in">
 			<%= render 'layouts/header'%>
-			<div class="container-fluid">
-				<div class="row-fluid">
-					<div class="span2">
-						<div class="hidden-phone">
-							<%= render 'layouts/left-board'%>
+				<div class="container">
+					<div class="row-fluid">
+						<div class="span2">
+						   <div class="hidden-phone">
+						   	<%= render 'layouts/left-board'%>
+						   </div>
+						</div>
+						<div class="span10">
+						   <%= yield %>
 						</div>
 					</div>
-					<div class="span8">
-						<%= yield %>
-					</div>
-					<div class="span2 hidden-phone">
-
-					</div>	
 				</div>
 			</div>
 		<% else %>
