--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -3,12 +3,12 @@
 	 <meta property='st:type' content='Company Profile ' />
 </head>
 <div class="hierachy">
-	<div class="row-fluid">
-		<div class="span12 bottom-border">
+
+		<div class=" bottom-border">
 			<%= link_to "Companies", companies_path %> &nbsp > &nbsp <%= @company.name%>
 			<span class="pull-right"><%= render 'layouts/swiftype'%></span>
 		</div>
-	</div>
+
 </div>
 
 <div class="row-fluid">
