--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,7 +6,7 @@
 	
 	<% @groups.each do |group| %>
 	<ul>	
-		<li> <%= link_to "#{group.name}", group %> </li>
+		<li> <%= link_to "#{group.name}", group %> | <%= link_to "Add Members" %> </li>
 	</ul>
 	<% end %>
 	
