--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,7 +1,20 @@
 / show.html.haml
 .group
-    %h1= @group.name
+	%h1= @group.name
+	%h3= "Group Members"
+	- @groupmembers.each do |user|
+		%h5= User.find_by_id(user.user_id).first_name + ' | ' + User.find_by_id(user.user_id).email
+	%h5=params[:id]
+
+.groupmember_invite-form
+	= simple_form_for :invite, as: :groupmembers, url: groupmembers_path(:invite) do |f|
+		= f.input :email
+		= f.input :group_id, as: :hidden, value: @group.id 
+		= f.button :submit, "Invite Person"
+
 .comments
-    %h2 Comments
-    = render partial: 'comments/form', locals: { comment: @new_comment }
-    = render partial: 'comments/comment', collection: @comments, as: :comment
+	%h2 Comments
+	= render partial: 'comments/comment', collection: @comments, as: :comment
+	= render partial: 'comments/form', locals: { comment: @new_comment }
+    
+	
