ADDED RESPONSIVE YEWW

--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -18,7 +18,7 @@
 					<%= current_user.app_list_count %> </span></li>
 			<% end %>
 			<%= link_to jobs_path do %>
-				<li><i class="icon-briefcase  "></i> &nbsp  Job Opportunities <span class="pull-right badge"><%= Job.count%></span> </li>
+				<li><i class="icon-briefcase  "></i> &nbsp  Job Opportunities <span class="pull-right badge visible-desktop"><%= Job.count%></span> </li>
 			<% end %>
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate  "></i> &nbsp Companies </li>
