--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,7 @@
 
 	<head>
 		<title><%= full_title(yield(:title)) %></title>  
- 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+
 	  <%= stylesheet_link_tag    "application", :media => "all" %>
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
@@ -25,7 +24,7 @@
 				<div class="container">
 					<div class="row-fluid">
 						<div class="span2">
-						   <div class="hidden-phone">
+						   <div>
 						   	<%= render 'layouts/left-board'%>
 						   </div>
 						</div>
