--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -1,5 +1,4 @@
 <div class="left-dashboard">
-
 	<div class="logo">
 		<%= link_to image_tag('menulogo.png'), root_path %>
 	</div>
@@ -12,24 +11,18 @@
 	
 	<div class="menu-area">
 		<ul class="unstyled">
-
 			<%= link_to root_path do %>
 				<li><i class="icon-pencil  "></i> &nbsp My Jobs  <span class="pull-right badge badge-important">
 					<%= current_user.app_list_count %> </span></li>
 			<% end %>
 			<%= link_to jobs_path do %>
-				<li><i class="icon-briefcase  "></i> &nbsp  Job Opportunities <span class="pull-right badge visible-desktop"><%= Job.count%></span> </li>
+				<li><i class="icon-briefcase  "></i> &nbsp  Job Opportunities 
+				    <span class="pull-right badge visible-desktop"><%= Job.count%></span> 
+				</li>
 			<% end %>
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate  "></i> &nbsp Companies </li>
 			<% end %>
 		</ul>
 	</div>
-	
-	<div class="blank-area">
-		
-	</div>
-	
-
-
 </div>
