--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 				<%= render 'devise/registrations/signup_copywrite'%>
 			</div>	
 			<div class="span5">
-				<div class="left-bar pull-right">
+				<div class="left-bar">
 					<h2>Sign Up</h2>	
 					<%=form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 						
