--- a/app/views/layouts/_left-board.html.erb
+++ b/app/views/layouts/_left-board.html.erb
@@ -23,6 +23,33 @@
 			<%= link_to companies_path do %>
 				<li><i class="icon-certificate  "></i> &nbsp Companies </li>
 			<% end %>
+			<%= link_to groups_path do %>
+				<li><i class="icon-certificate  "></i> &nbsp My Groups </li>
+			<% end %>
+
+			
 		</ul>
 	</div>
+	
+	<div class="groups-list">
+		<hr>
+		
+		<% if current_user.has_no_groups? %>
+		 <%= link_to "Make your own group!", groups_new_path%>
+		<% else %>
+			<ul class="unstyled">	
+			<% current_user.groups.each do |group| %>
+				<li>
+					<%= link_to group do %>
+						<%= group.name  %><br />
+					<% end %>
+				</li>
+			<% end %>
+			<li><%= link_to "Make your own group!", groups_new_path%></li>
+			</ul>
+			
+		<% end %>
+	</div>
+	
+	
 </div>
