fixed mailers and added description

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -3,6 +3,8 @@
 	
 	<%= f.input :name, required: true, placeholder: "Your Group Name" %>
 	
+	<%= f.input :description, placeholder: "Description" %>
+	
 	
 	<%= f.fields_for :groupmembers do |groupmembers| %>
 		<%= groupmembers.hidden_field :user_id, :value => current_user.id %>
