--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -4,6 +4,8 @@
   <%= devise_error_messages! %>
   <%= f.hidden_field :invitation_token %>
 
+  <%= f.input :first_name %>
+
   <%= f.input :password %>
   <%= f.input :password_confirmation %>
 
