--- a/app/views/devise/mailer/invitation_instructions.html.erb
+++ b/app/views/devise/mailer/invitation_instructions.html.erb
@@ -1,6 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has invited you to <%= root_url %>, you can accept it through the link below.</p>
+
+<p>Hi <%= @resource.email %>!</p>
+
+<p><%= User.find_by_id(@resource.invited_by_id).first_name %> (<%= User.find_by_id(@resource.invited_by_id).email%>) invited you to their Group on ResQuery. <p>
+	
+<p>You can accept it through the link below.</p>
 
 <p><%= link_to 'Accept invitation', accept_invitation_url(@resource, :invitation_token => @resource.invitation_token) %></p>
 
