--- a/app/views/groups/index.haml
+++ b/app/views/groups/index.haml
@@ -5,12 +5,18 @@
 		.span7
 			- @groups.each do |group|
 				%ul{:class => "unstyled"}
-					%li{:class=>"margin-bottom bottom-border"} 
-						%h5= link_to "#{group.name}", group 
-						This is a description of the group that would be useful to people reading it
-						Here is also a list of the people in the group
-						%br
-						=link_to "Add members"
+					%li
+						.pad-bottom
+						.row-fluid
+							.pad-bottom
+								.span2
+									.circle-index-page
+								.span8
+									%h5= link_to "#{group.name}", group 
+									This is a description of the group that would be useful to people reading it
+									Here is also a list of the people in the group
+									%br
+									=link_to "Add members"
 						
 		.span5
 			.left-border
