--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,6 +12,7 @@
 		  <%= f.email_field :email,      :autofocus => true, :placeholder => "Email" %>
 		  <%= f.text_field :mobile_number, :placeholder => "Optional Contact Number" %>
 		
+		  <%= f.file_field :avatar, :placeholder => "logo" %>
 		
 		  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
 		    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
