--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -5,7 +5,7 @@
 		.group
 			.pad-top
 				%h3= @group.name
-				- if current_user.is_group_admin?
+				= if can? :manage, Group
 					.groupmember_invite-form
 						= simple_form_for :invite, as: :groupmembers, url: groupmembers_path(:invite) do |f|
 							= f.input :email
