removed index.html from groups

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -14,7 +14,7 @@
 
 
 
-		<div class="group-feed grey-text">
+		<div class="group-feed grey-text hidden-phone">
 			<div class="row-fluid">
 				<div class="span5">
 					Company & Job
