--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -2,7 +2,7 @@
 	.container-fluid
 		.row-fluid
 			.span12		
-				= link_to "New to ResQuery - Groups for discussions and feedback!", groups_path, :class=>"yellow-text"
+				= link_to "New Stuff - Groups for discussions and feedback!", groups_path, :class=>"yellow-text hidden-phone"
 				.pull-right
 					- if current_user.role == "admin" 
 						=link_to 'Admin', admin_path
