--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -483,6 +483,14 @@ input[type='checkbox'] {
 	height:80px;
 }
 
+.circle-index-page-grey{
+	margin-top:10px;
+	border-radius:40px;
+	background-color:$dark-grey;
+	width:80px;
+	height:80px;
+}
+
 .circle-index-comment{
 	margin-top:10px;
 	border-radius:25px;
@@ -493,10 +501,10 @@ input[type='checkbox'] {
 
 .circle-user-list{
 	margin-top:10px;
-	border-radius:15px;
+	border-radius:20px;
 	background-color:$dark-red;
-	width:30px;
-	height:30px;
+	width:40px;
+	height:40px;
 }
 
 .comment-writing {
