--- a/app/views/groups/index.haml
+++ b/app/views/groups/index.haml
@@ -17,6 +17,18 @@
 									Here is also a list of the people in the group
 									%br
 									=link_to "Add members"
+			- if @groups.count == 0
+				.pad-bottom
+				.row-fluid
+					.pad-bottom
+						.span2
+							.circle-index-page-grey
+						.span8
+							%h5= link_to 'Add a new group!', new_group_path 
+							This is a description of the group that would be useful to people reading it
+							Here is also a list of the people in the group
+							%br
+							=link_to "Add members"	
 						
 		.span5
 			.left-border
