--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -4,13 +4,7 @@
 	.span9
 		.group
 			.pad-top
-				%h3= @group.name
-				= if can? :manage, Group
-					.groupmember_invite-form
-						= simple_form_for :invite, as: :groupmembers, url: groupmembers_path(:invite) do |f|
-							= f.input :email
-							= f.input :group_id, as: :hidden, :input_html => { :value => params[:id] }
-							= f.button :submit, "Invite Person"	
+				%h3= @group.name				
 				.comments
 				= render partial: 'comments/comment', collection: @comments, as: :comment
 				= render partial: 'comments/form', locals: { comment: @new_comment }
@@ -18,8 +12,16 @@
 		.span3
 			.pad-all
 				.row-fluid
+				- if can? :manage, Group
+					.info
+					.info
+						.groupmember_invite-form
+							= simple_form_for :invite, as: :groupmembers, url: groupmembers_path(:invite) do |f|
+								= f.input :email
+								= f.input :group_id, as: :hidden, :input_html => { :value => params[:id] }
+								= f.button :submit, "Invite Person"
 					- @groupmembers.each do |user|
-						.span3
+						.span4
 							.circle-user-list
 							.center-alignment
 								= User.find_by_id(user.user_id).first_name 
