--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -32,7 +32,7 @@
 					<%= form_for @appList, :as => :applist do |f|%>
 						<%= f.hidden_field :job_id, :value => params[:id] %>
 						<%= f.hidden_field :status, :value => "Research" %>
-						<%= f.submit "Add to My Jobs", :class => "btn btn-info"%>
+						<%= f.submit "Add to My Jobs", :class => "btn btn-info btn-large"%>
 					<% end %>
 				<% end %>
 			<% else %>
