--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -12,6 +12,7 @@
 				%h5
 					=comment.user.first_name
 					%small= comment.updated_at.localtime.strftime("%d %b %I:%M %P")
-					- if can? :destroy, Group
+					- if (comment.user.id == current_user.id || current_user.role == "admin")
 						=link_to "x", comment_path(comment), method: :delete, remote: true, confirm: "Are you sure?", disable_with: "x", class: 'close'
 				%p= comment.body
+				
