styling on groups

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -4,7 +4,8 @@
 	.span9
 		.group
 			.pad-top
-				%h3= @group.name
+				.pad-bottom
+					%h3= @group.name
 				.comments
 				= render partial: 'comments/comment', collection: @comments, as: :comment
 				= render partial: 'comments/form', locals: { comment: @new_comment }
