--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -2,16 +2,11 @@
 	<div class="info-message">	
 	
 		
-		<div class="info-text center-alignment">	
-			<% ab_test "signup", "long", "short" do |style| %>
-				<h2>
-				<% if style == "long" %>Your own personalised  space to coach you through your job applications <% end %>
-				<% if style == "short" %>It is your Career. </br> </br>Signup for ResQuery and take control today by organising your job apps in one place <% end %>
-				</h2><br/>		
-	
-				 <h4><%if style == "long" %>ResQuery turns the <%= Job.count %> reputable grad and internship jobs in Sydney into
-					opportunities for you, instead of stresses.  </h4> <% end %>
-			<% end %>
+		<div class="center-alignment">	
+			
+			<h1 class="big-title-text">Use your networks <span class="green-font">constructively</span></h1>
+			<p class="intro-text">Groups, Info, Chat and Meetings to help you achieve goals</p>
+			
 		</div>
 				
 		
