--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="container footing margin-top">
 	<div class="row">
-		<div class="span12">
+		<div class="offset1 span10">
 			<div class="footer">
 				<ul class="inline">
 					<li><strong>resQuery</strong></li>
@@ -17,7 +17,7 @@
 					      <li><%= link_to 'Help' %></li>
 						<% end %>					
 					<% end %>
-					<li class="pull-right">  Happy <%= Time.now.localtime.strftime("%A") %> ! &nbsp</li>
+					<li class="pull-right"> We wish you a  happy <%= Time.now.localtime.strftime("%A") %> ! &nbsp</li>
 				</ul>
 			</div>
 		</div>
