--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,12 +1,12 @@
 <div class="info-bar">
 	<div class="container">
 		<div class="row">
-			<div class="span7">
+			<div class="offset1 span7">
 				<%= render 'devise/registrations/signup_copywrite'%>
 			</div>	
-			<div class="span5">
+			<div class="offset1 span2">
 				<div class="left-bar">
-					<h2>Sign Up</h2>	
+					Sign Up	
 					<%=form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 						
 						<%= f.text_field :first_name, :placeholder => "Your First Name"%> </br>
@@ -31,13 +31,7 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="span12">
-			<%= render 'layouts/swiftype'%>
-		</div>
-	</div>
-</div>
+
 
 <% if false %>
 <div class="container">
