--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,6 +32,7 @@ $link-green: #468966;
 
 $light-green: #acd373;
 $aqua: #00746b;
+$dark-aqua:#003530;
 
 /* other*/
 $ft-color: #fff1e0;
@@ -535,5 +536,27 @@ input[type='checkbox'] {
 
 .sign-in-button:hover{
 	text-decoration:none;
+	color:$aqua;
+}
+
+.sign-up-text{
+	font-size:15px;
+	color:$light-green;
+	font-weight:400;
+	padding-bottom:10px;
+}
+
+.sign-up-button{
+	min-width:99%;
+	padding: 3px 15px;
+    background: $dark-aqua;
+    color: #FFF;
+	border-radius: 4px;
+}
+
+.sign-up-button:hover, .sign-up-button:focus {
+    background: $light-green;
+    border: solid 1px #2A4E77;
+    text-decoration: none;
 	color:$aqua;
 }
