--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,18 +6,20 @@
 			</div>	
 			<div class="offset1 span2">
 				<div class="left-bar">
-					Sign Up	
+					<div class="center-alignment">
+					<h4 class="sign-up-text">Create my account</h4>
+					</div>
 					<%=form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 						
-						<%= f.text_field :first_name, :placeholder => "Your First Name"%> </br>
-						<%= f.email_field :email, :placeholder => "Your Email" %></br> 
-						<%= f.password_field :password, :placeholder => "New Password" %>
+						<%= f.text_field :first_name, :placeholder => " First Name"%> </br>
+						<%= f.email_field :email, :placeholder => " Email" %></br> 
+						<%= f.password_field :password, :placeholder => " Password" %>
 						<%= f.hidden_field :role, :value => "student" %>
 							<% if false %>
 								<%= f.password_field :password_confirmation, :placeholder => "Password Confirmation" %>
 							<% end %>
 						</br>
-						<div><%= f.submit "Start managing job apps easier", :class => "btn btn-info" %></div>
+						<div><%= f.submit "Join", :class => "sign-up-button" %></div>
 					<% end %>
 					<% if false %>
 						<%= render "devise/shared/links" %>	
