--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -5,14 +5,14 @@
 <div class="container">
 	<div class="row">
 <% end %>		
-		<div class="span12">
+		<div class="offset1 span10">
 			<div class="listCopy">
 			<div class="sellingpoints">
 				
-				<div class= 'span8'>
-				<b><h2> About ResQuery </h2></b>
+				
+				<b><h2> About Us </h2></b>
 								
-				ResQuery is a free service for students, to take control and keep organised during graduate and internship applications.
+				ResQuery aims to help you to take control and keep organised during graduate and internship applications.
 				<p></br>
 				ResQuery was born after two UNSW students felt there had to be a better way of juggling jobs apps than using a large cumbersome excel file.	
 				<p></br>
@@ -37,7 +37,7 @@
 				
 				</div>
 			
-			</div>
+		
 			</div>
 		</div>
 	</div>
