--- a/app/views/devise/registrations/_signup_copywrite.html.erb
+++ b/app/views/devise/registrations/_signup_copywrite.html.erb
@@ -5,7 +5,7 @@
 		<div class="center-alignment">	
 			
 			<h1 class="big-title-text">Use your networks <span class="green-font">constructively</span></h1>
-			<p class="intro-text"> <%= User.count %> friends use our Groups, Info, Chat and Meetings to help each
+			<p class="intro-text"> <%= User.count %> friends are using our Groups, Info, Chat and Meetings to help each
 				other get jobs
 				 </p>
 			
