changed logoo file

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -565,3 +565,10 @@ input[type='checkbox'] {
 .li-smaller-height{
 	padding:3px 0px 3px 10px !important;
 }
+
+.logo{
+	img {
+		height:55px;
+		width:204px;
+	}
+}
