--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 				<ul class="inline">
 					<li><strong>resQuery</strong></li>
 					<li><%= link_to 'About', about_path %></li>
-					<li><%= link_to 'Jobs', jobs_path %></li>
+					<li><%= link_to 'The Australia-wide Graduate & Internship List', jobs_path %></li>
 					<li><%= link_to 'Companies', companies_path %></li>
 					<li><%= link_to 'Knowledge Base', articles_path %></li>
 						<% if false %>
