--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -4,7 +4,7 @@
 		<div class="container">	
 			<div class="row">
 				<div class="offset1 span10">
-					<%= link_to image_tag('alpha-logo.png'), root_path %>
+					<%= link_to image_tag('alpha-logo.png'), root_path, :class => "logo" %>
 
 					<div class="pull-right">
 						<div class="copywriteAreaRight">
