--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -323,6 +323,9 @@ input[type='checkbox'] {
 	    text-decoration: none;
 
 	}
+	h3{
+		color:#E8F2F2;
+	}
 
 }
 
@@ -503,7 +506,6 @@ input[type='checkbox'] {
 }
 
 .circle-index-comment{
-	margin-top:15px;
 	border-radius:25px;
 	background-color:$dark-red;
 	width:50px;
