--- a/app/views/dashboards/_new_user_page.html.erb
+++ b/app/views/dashboards/_new_user_page.html.erb
@@ -8,9 +8,8 @@
 </div>
 
 
-<div class="row-fluid bottom-border ">
-	
-	
+<div class="row-fluid ">
+
 	<div class="span8">
 		<h5>Follow your first job:</h5>
 		<br />
