--- a/app/views/staticpages/_copywritearea.html.erb
+++ b/app/views/staticpages/_copywritearea.html.erb
@@ -1,5 +1,5 @@
 
-	<div class="copywrite-area background-white">
+	<div class="copywrite-area">
 		<br />
 		<div class="container">	
 			<div class="row">
