--- a/app/views/staticpages/about.html.erb
+++ b/app/views/staticpages/about.html.erb
@@ -12,7 +12,9 @@
 				
 				<b><h2> About Us </h2></b>
 								
-				ResQuery aims to help you to take control and keep organised during graduate and internship applications.
+								
+				ResQuery is 
+				
 				<p></br>
 				ResQuery was born after two UNSW students felt there had to be a better way of juggling jobs apps than using a large cumbersome excel file.	
 				<p></br>
