--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,7 +17,7 @@
 					      <li><%= link_to 'Help' %></li>
 						<% end %>					
 					<% end %>
-					<li class="pull-right"> We wish you a  happy <%= Time.now.localtime.strftime("%A") %> ! &nbsp</li>
+					<li class="pull-right"> We wish you the best of luck this <%= Time.now.localtime.strftime("%A") %> !</li>
 				</ul>
 			</div>
 		</div>
